crates/aranya-policy-compiler/tests/data/structs/substruct_lhs_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
6 |     let new_struct = Foo { x: "x", y: 0, z: false } substruct Baz
  |                      ^^^ struct `Foo` not defined
